# ldjam50

./: .gitignore  Cargo.toml  README.md
data/shaders/: base.frag  base.vert  particle.frag  particle.vert  text.frag  text.vert
src/: lib.rs  main.rs
src/engine/: camera.rs  collisions.rs  engine.rs  event_handler.rs  init.rs  mod.rs  movement.rs  object.rs  positioning.rs  renderer-o1.rs  renderer-o2.rs  renderer.rs  renderer_old.rs
src/engine/renderer/: mesh.rs  mod.rs  particle.rs  renderer.rs  shader.rs  sprite.rs  text.rs  texture.rs
src/engine/renderer/particle/: damage.rs  emitter.rs  fire.rs  fireex.rs  mod.rs  particle.rs  powder.rs  render.rs  water.rs
src/game/: button.rs  game.rs  main_menu.rs  mod.rs
src/game/gameplay/: backstory.rs  enemy.rs  gameplay.rs  mod.rs  ui.rs
