[package]
name = "ldjam50"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "*"
image = "*"
cgmath = "*"
cstr = "*"
nalgebra-glm  = "*"
rodio = "*"
cpal = "*"
rand = "*"

[target.'cfg(not(target_os = "windows"))'.dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[target.'cfg(target_os = "windows")'.dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false